--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,19 +1,28 @@
-name: Auto Merge Feature to Release
+name: Auto merge feature into release
 
 on:
   push:
     branches:
-      - 'feature_202512/*'
+      - 'feature_*'         # 你现在用的是 feature_202512，匹配这个模式
 
 jobs:
   merge:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Auto merge to release
-        uses: pascalgn/automerge-action@v0.15.3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Merge this feature branch into release
+        uses: actions/github-script@v7
         with:
-          mergeMethod: merge
-          base: release
-          head: ${{ github.ref_name }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const featureBranch = context.ref.replace('refs/heads/', '');
+            const baseBranch = 'release';
+
+            console.log(`Merging ${featureBranch} -> ${baseBranch}`);
+
+            await github.rest.repos.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base: baseBranch,
+              head: featureBranch,
+            });
